implemented refreshtoken without a database

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "tyoes": "index.d.ts",
   "scripts": {
     "dev": "nodemon -r dotenv/config src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,6 +17,7 @@
     "awilix": "^8.0.1",
     "awilix-express": "^8.0.0",
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
