--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "awilix": "^8.0.1",
     "awilix-express": "^8.0.0",
     "bcrypt": "^5.1.1",
-    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/crypto-js": "^4.1.2",
     "@types/jsonwebtoken": "^9.0.2"
   }
 }
