--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.4.5",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
